--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="utf-8">
     <title>Express and Webpack App</title>
-    <link rel="shortcut icon" href="#">
-</head>
-<body>
-    <h1>Expack</h1>
-    <p class="description">Express and Webpack Boilerplate App</p>
-    <div class="awful-selfie"></div>
+    <link rel="shortcut icon" type="image/png" href="http://example.com/favicon.png"/>
+
+    <body> 
+    <header>Move That Ball!</header>
+    <div class="container">
+        <span class="circle"></span>
+    </div> 
+    <button class="click" id="click">Hi</button> 
+    
 </body>
 </html>
